--- a/tasks.org
+++ b/tasks.org
@@ -2,12 +2,15 @@
 #+PROPERTY: Effort_ALL  0:10 0:20 0:30 1:00 2:00 4:00 6:00 8:00
 #+COLUMNS: %38ITEM(Details) %TAGS(Context) %7TODO(To Do) %5Effort(Time){:} %6CLOCKSUM{Total}
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
-#+BEGIN: clocktable :maxlevel 2 :scope file
 #+FILETAGS :@task:
-#+CAPTION: Clock summary at [2016-12-13 二 15:28]
-| Headline     | Time   |
-|--------------+--------|
-| *Total time* | *0:00* |
+#+BEGIN: clocktable :maxlevel 2 :scope file
+#+CAPTION: Clock summary at [2016-12-14 周三 19:08]
+| Headline                      | Time   |      |
+|-------------------------------+--------+------|
+| *Total time*                  | *1:58* |      |
+|-------------------------------+--------+------|
+| BOOK                          | 1:58   |      |
+| \_  TODO Game Coding Complete |        | 1:58 |
 #+END:
 *  BOOK                                                              :@book:
 ** TODO CLRS
@@ -15,7 +18,13 @@
 ** TODO The Mythical Man-Month 
 ** TODO Mathematics of 3D Game Programming and Computer Graphics
    DEADLINE: <2016-12-23 五> SCHEDULED: <2016-12-13 二>
-** TODO Game Coding Complete
+** TODO Game Coding Complete 
+   DEADLINE: <2016-12-31 周六> SCHEDULED: <2016-12-14 周三>
+   :LOGBOOK:
+   CLOCK: [2016-12-14 周三 19:02]--[2016-12-14 周三 19:08] =>  0:06
+   CLOCK: [2016-12-14 周三 17:11]--[2016-12-14 周三 18:13] =>  1:02
+   CLOCK: [2016-12-14 周三 16:15]--[2016-12-14 周三 17:05] =>  0:50
+   :END:
 ** TODO GEA
 ** TODO OpenGL Programming Guide 9th Ed
 ** TODO Multiplayer Game Programming
