--- a/tasks.org
+++ b/tasks.org
@@ -4,14 +4,14 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2016-12-15 四 06:16]
+#+CAPTION: Clock summary at [2016-12-15 周四 02:06]
 | Headline                           | Time   |      |
 |------------------------------------+--------+------|
-| *Total time*                       | *3:47* |      |
+| *Total time*                       | *4:45* |      |
 |------------------------------------+--------+------|
-| BOOK                               | 3:47   |      |
+| BOOK                               | 4:45   |      |
 | \_  TODO Mathematics of 3D Game... |        | 0:54 |
-| \_  TODO Game Coding Complete[8%]  |        | 2:53 |
+| \_  TODO Game Coding Complete[12%] |        | 3:51 |
 #+END:
 * BOOK                                                               :@book:
 ** TODO CLRS
@@ -38,11 +38,11 @@
    CLOCK: [2016-12-13 二 18:48]--[2016-12-13 二 19:42] =>  0:54
    :END:   
    DEADLINE: <2016-12-23 五> SCHEDULED: <2016-12-13 二>
-** TODO Game Coding Complete[8%]
+** TODO Game Coding Complete[16%]
    - [X] 什么是游戏编程
    - [X] 游戏中有什么
-   - [ ] 拯救了我的编码趣闻和风格
-   - [ ] 生成游戏
+   - [X] 拯救了我的编码趣闻和风格
+   - [X] 生成游戏
    - [ ] 游戏初始化和关闭
    - [ ] 游戏主体和组件结构
    - [ ] 主循环的控制
@@ -64,6 +64,9 @@
    - [ ] 对游戏进行调试和分析
    - [ ] 驶向结束
    :LOGBOOK:
+   CLOCK: [2016-12-15 周四 01:35]--[2016-12-15 周四 02:05] =>  0:30
+   CLOCK: [2016-12-15 周四 01:11]--[2016-12-15 周四 01:25] =>  0:14
+   CLOCK: [2016-12-15 周四 00:56]--[2016-12-15 周四 01:10] =>  0:14
    CLOCK: [2016-12-15 四 05:21]--[2016-12-15 四 06:16] =>  0:55
    CLOCK: [2016-12-14 周三 19:02]--[2016-12-14 周三 19:08] =>  0:06
    CLOCK: [2016-12-14 周三 17:11]--[2016-12-14 周三 18:13] =>  1:02
