--- a/tasks.org
+++ b/tasks.org
@@ -4,14 +4,16 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2016-12-15 周四 02:06]
-| Headline                           | Time   |      |
+#+CAPTION: Clock summary at [2016-12-16 周五 22:34]
+| Headline                           |   Time |      |
 |------------------------------------+--------+------|
-| *Total time*                       | *4:45* |      |
+| *Total time*                       | *9:12* |      |
 |------------------------------------+--------+------|
-| BOOK                               | 4:45   |      |
+| BOOK                               |   6:32 |      |
 | \_  TODO Mathematics of 3D Game... |        | 0:54 |
-| \_  TODO Game Coding Complete[12%] |        | 3:51 |
+| \_  TODO Game Coding Complete[29%] |        | 5:38 |
+| Homework                           |   2:40 |      |
+| \_  TODO OpenGL Game               |        | 2:40 |
 #+END:
 * BOOK                                                               :@book:
 ** TODO CLRS
@@ -38,14 +40,14 @@
    CLOCK: [2016-12-13 二 18:48]--[2016-12-13 二 19:42] =>  0:54
    :END:   
    DEADLINE: <2016-12-23 五> SCHEDULED: <2016-12-13 二>
-** TODO Game Coding Complete[16%]
+** TODO Game Coding Complete[29%]
    - [X] 什么是游戏编程
    - [X] 游戏中有什么
    - [X] 拯救了我的编码趣闻和风格
    - [X] 生成游戏
-   - [ ] 游戏初始化和关闭
-   - [ ] 游戏主体和组件结构
-   - [ ] 主循环的控制
+   - [X] 游戏初始化和关闭
+   - [X] 游戏主体和组件结构
+   - [X] 主循环的控制
    - [ ] 游戏数据的加载和缓存
    - [ ] 输入设备编程
    - [ ] 用户界面编程
@@ -64,6 +66,8 @@
    - [ ] 对游戏进行调试和分析
    - [ ] 驶向结束
    :LOGBOOK:
+   CLOCK: [2016-12-16 周五 22:02]--[2016-12-16 周五 22:19] =>  0:17
+   CLOCK: [2016-12-15 周四 15:11]--[2016-12-15 周四 16:41] =>  1:30
    CLOCK: [2016-12-15 周四 01:35]--[2016-12-15 周四 02:05] =>  0:30
    CLOCK: [2016-12-15 周四 01:11]--[2016-12-15 周四 01:25] =>  0:14
    CLOCK: [2016-12-15 周四 00:56]--[2016-12-15 周四 01:10] =>  0:14
@@ -78,7 +82,17 @@
 ** TODO Multiplayer Game Programming
 * Homework
 ** TODO OpenGL Game                                              :@projects:
-   DEADLINE: <2016-12-22 四> SCHEDULED: <2016-12-13 二>
+   DEADLINE: <2016-12-22 四> SCHEDULED: <2016-12-13 二>   
+:LOGBOOK:
+CLOCK: [2016-12-16 周五 22:34]
+   CLOCK: [2016-12-16 周五 21:47]--[2016-12-16 周五 22:01] =>  0:14
+   CLOCK: [2016-12-16 周五 20:00]--[2016-12-16 周五 20:30] =>  0:30
+   CLOCK: [2016-12-16 周五 18:45]--[2016-12-16 周五 19:48] =>  1:03
+   CLOCK: [2016-12-16 周五 17:42]--[2016-12-16 周五 18:31] =>  0:49
+   CLOCK: [2016-12-16 周五 17:34]--[2016-12-16 周五 17:37] =>  0:03
+   CLOCK: [2016-12-16 周五 16:47]--[2016-12-16 周五 16:48] =>  0:01
+   :END:
+*** TODO Opengl 游戏程序设计 
 * Things
 * Daily                                                             :@daily:
 
