--- a/tasks.org
+++ b/tasks.org
@@ -4,16 +4,16 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2016-12-16 周五 22:34]
-| Headline                           |   Time |      |
-|------------------------------------+--------+------|
-| *Total time*                       | *9:12* |      |
-|------------------------------------+--------+------|
-| BOOK                               |   6:32 |      |
-| \_  TODO Mathematics of 3D Game... |        | 0:54 |
-| \_  TODO Game Coding Complete[29%] |        | 5:38 |
-| Homework                           |   2:40 |      |
-| \_  TODO OpenGL Game               |        | 2:40 |
+#+CAPTION: Clock summary at [2016-12-17 周六 21:55]
+| Headline                           |    Time |      |
+|------------------------------------+---------+------|
+| *Total time*                       | *10:38* |      |
+|------------------------------------+---------+------|
+| BOOK                               |    7:40 |      |
+| \_  TODO Mathematics of 3D Game... |         | 0:54 |
+| \_  TODO Game Coding Complete[29%] |         | 6:46 |
+| Homework                           |    2:58 |      |
+| \_  TODO OpenGL Game               |         | 2:58 |
 #+END:
 * BOOK                                                               :@book:
 ** TODO CLRS
@@ -66,6 +66,7 @@
    - [ ] 对游戏进行调试和分析
    - [ ] 驶向结束
    :LOGBOOK:
+   CLOCK: [2016-12-17 周六 20:47]--[2016-12-17 周六 21:55] =>  1:08
    CLOCK: [2016-12-16 周五 22:02]--[2016-12-16 周五 22:19] =>  0:17
    CLOCK: [2016-12-15 周四 15:11]--[2016-12-15 周四 16:41] =>  1:30
    CLOCK: [2016-12-15 周四 01:35]--[2016-12-15 周四 02:05] =>  0:30
@@ -84,7 +85,7 @@
 ** TODO OpenGL Game                                              :@projects:
    DEADLINE: <2016-12-22 四> SCHEDULED: <2016-12-13 二>   
 :LOGBOOK:
-CLOCK: [2016-12-16 周五 22:34]
+CLOCK: [2016-12-17 周六 11:35]--[2016-12-17 周六 11:53] =>  0:18
    CLOCK: [2016-12-16 周五 21:47]--[2016-12-16 周五 22:01] =>  0:14
    CLOCK: [2016-12-16 周五 20:00]--[2016-12-16 周五 20:30] =>  0:30
    CLOCK: [2016-12-16 周五 18:45]--[2016-12-16 周五 19:48] =>  1:03
@@ -92,7 +93,6 @@ CLOCK: [2016-12-16 周五 22:34]
    CLOCK: [2016-12-16 周五 17:34]--[2016-12-16 周五 17:37] =>  0:03
    CLOCK: [2016-12-16 周五 16:47]--[2016-12-16 周五 16:48] =>  0:01
    :END:
-*** TODO Opengl 游戏程序设计 
 * Things
 * Daily                                                             :@daily:
 
