--- a/tasks.org
+++ b/tasks.org
@@ -3,18 +3,18 @@
 #+COLUMNS: %38ITEM(Details) %TAGS(Context) %7TODO(To Do) %5Effort(Time){:} %6CLOCKSUM{Total}
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
-#+BEG\IN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2016-12-20 周二 23:17]
-| Headline                                |    Time |       |
-|-----------------------------------------+---------+-------|
-| *Total time*                            | *21:49* |       |
-|-----------------------------------------+---------+-------|
-| BOOK                                    |   15:34 |       |
-| \_  TODO [#A] Windows 程序设计          |         |  1:22 |
-| \_  TODO [#B] Mathematics of 3D Game... |         |  0:54 |
-| \_  TODO [#A] Game Coding Complete[29%] |         | 13:18 |
-| Homework                                |    6:15 |       |
-| \_  TODO [#A] OpenGL Game               |         |  6:15 |
+#+BEGIN: clocktable :maxlevel 2 :scope file
+#+CAPTION: Clock summary at [2016-12-28 周三 19:54]
+| Headline                                | Time       |         |
+|-----------------------------------------+------------+---------|
+| *Total time*                            | *1d 14:30* |         |
+|-----------------------------------------+------------+---------|
+| BOOK                                    | 1d 8:15    |         |
+| \_  TODO [#A] Windows 程序设计          |            |    1:22 |
+| \_  TODO [#B] Mathematics of 3D Game... |            |    0:54 |
+| \_  TODO [#A] Game Coding Complete[45%] |            | 1d 5:59 |
+| Homework                                | 6:15       |         |
+| \_  TODO [#A] OpenGL Game               |            |    6:15 |
 #+END:
 * BOOK                                                               :@book:
 ** TODO [#C] CLRS
@@ -70,7 +70,7 @@
     :LOGBOOK:
     CLOCK: [2016-12-13 二 18:48]--[2016-12-13 二 19:42] =>  0:54
    :END:   
-** TODO [#A] Game Coding Complete[29%]
+** TODO [#A] Game Coding Complete[45%]
    - [X] 什么是游戏编程
    - [X] 游戏中有什么
    - [X] 拯救了我的编码趣闻和风格
@@ -78,13 +78,13 @@
    - [X] 游戏初始化和关闭
    - [X] 游戏主体和组件结构
    - [X] 主循环的控制
-   - [ ] 游戏数据的加载和缓存
-   - [ ] 输入设备编程
-   - [ ] 用户界面编程
+   - [X] 游戏数据的加载和缓存
+   - [X] 输入设备编程 
+   - [X] 用户界面编程
    - [ ] 游戏事件管理
    - [ ] 使用 Lua 编写脚本
    - [ ] 游戏音频
-   - [ ] 3D 图形基础
+   - [X] 3D 图形基础
    - [ ] 3D 顶点和像素着色器
    - [ ] 3D 场景
    - [ ] 碰撞和简单的物理学
@@ -96,6 +96,22 @@
    - [ ] 对游戏进行调试和分析
    - [ ] 驶向结束
    :LOGBOOK:
+   CLOCK: [2016-12-28 周三 17:12]--[2016-12-28 周三 19:53] =>  2:41
+   CLOCK: [2016-12-28 周三 11:28]--[2016-12-28 周三 11:30] =>  0:02
+   CLOCK: [2016-12-28 周三 09:51]--[2016-12-28 周三 11:00] =>  1:09
+   CLOCK: [2016-12-28 周三 08:53]--[2016-12-28 周三 09:08] =>  0:15
+   CLOCK: [2016-12-27 周二 23:18]--[2016-12-27 周二 23:20] =>  0:02
+   CLOCK: [2016-12-27 周二 19:10]--[2016-12-27 周二 19:58] =>  0:48
+   CLOCK: [2016-12-27 周二 16:54]--[2016-12-27 周二 17:42] =>  0:48
+   CLOCK: [2016-12-27 周二 16:06]--[2016-12-27 周二 16:21] =>  0:15
+   CLOCK: [2016-12-26 周一 18:50]--[2016-12-26 周一 20:10] =>  1:20
+   CLOCK: [2016-12-26 周一 17:59]--[2016-12-26 周一 18:37] =>  0:38
+   CLOCK: [2016-12-22 周四 16:40]--[2016-12-22 周四 17:56] =>  1:16
+   CLOCK: [2016-12-22 周四 13:57]--[2016-12-22 周四 14:40] =>  0:43
+   CLOCK: [2016-12-21 周三 22:59]--[2016-12-22 周四 01:51] =>  2:52
+   CLOCK: [2016-12-21 周三 19:14]--[2016-12-21 周三 21:11] =>  1:57
+   CLOCK: [2016-12-21 周三 17:08]--[2016-12-21 周三 17:58] =>  0:50
+   CLOCK: [2016-12-21 周三 13:43]--[2016-12-21 周三 14:35] =>  0:52
    CLOCK: [2016-12-20 周二 23:33]--[2016-12-20 周二 23:46] =>  0:13
    CLOCK: [2016-12-20 周二 21:45]--[2016-12-20 周二 23:17] =>  1:32
    CLOCK: [2016-12-20 周二 18:01]--[2016-12-20 周二 19:00] =>  0:59
