--- a/tasks.org
+++ b/tasks.org
@@ -4,17 +4,17 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2016-12-28 周三 19:54]
+#+CAPTION: Clock summary at [2016-12-29 周四 05:07]
 | Headline                                | Time       |         |
 |-----------------------------------------+------------+---------|
-| *Total time*                            | *1d 14:30* |         |
+| *Total time*                            | *1d 20:06* |         |
 |-----------------------------------------+------------+---------|
 | BOOK                                    | 1d 8:15    |         |
 | \_  TODO [#A] Windows 程序设计          |            |    1:22 |
 | \_  TODO [#B] Mathematics of 3D Game... |            |    0:54 |
 | \_  TODO [#A] Game Coding Complete[45%] |            | 1d 5:59 |
-| Homework                                | 6:15       |         |
-| \_  TODO [#A] OpenGL Game               |            |    6:15 |
+| Homework                                | 11:51      |         |
+| \_  TODO [#A] OpenGL Game               |            |   11:51 |
 #+END:
 * BOOK                                                               :@book:
 ** TODO [#C] CLRS
@@ -139,21 +139,6 @@
 ** TODO [#C] OpenGL Programming Guide 9th Ed
 ** TODO [#C] Multiplayer Game Programming
 * Homework
-** TODO [#A] OpenGL Game                                         :@projects:
-   DEADLINE: <2016-12-29 四> SCHEDULED: <2016-12-13 二>   
-   :LOGBOOK:
-   CLOCK: [2016-12-18 周日 16:02]--[2016-12-18 周日 16:40] =>  0:38
-   CLOCK: [2016-12-18 周日 01:22]--[2016-12-18 周日 02:15] =>  0:53
-   CLOCK: [2016-12-18 周日 00:08]--[2016-12-18 周日 00:49] =>  0:41
-   CLOCK: [2016-12-17 周六 22:35]--[2016-12-17 周六 23:40] =>  1:05
-   CLOCK: [2016-12-17 周六 11:35]--[2016-12-17 周六 11:53] =>  0:18
-   CLOCK: [2016-12-16 周五 21:47]--[2016-12-16 周五 22:01] =>  0:14
-   CLOCK: [2016-12-16 周五 20:00]--[2016-12-16 周五 20:30] =>  0:30
-   CLOCK: [2016-12-16 周五 18:45]--[2016-12-16 周五 19:48] =>  1:03
-   CLOCK: [2016-12-16 周五 17:42]--[2016-12-16 周五 18:31] =>  0:49
-   CLOCK: [2016-12-16 周五 17:34]--[2016-12-16 周五 17:37] =>  0:03
-   CLOCK: [2016-12-16 周五 16:47]--[2016-12-16 周五 16:48] =>  0:01
-   :END:
 * Things
 * Daily                                                             :@daily:
 
