--- a/tasks.org
+++ b/tasks.org
@@ -17,6 +17,11 @@
 | \_  TODO [#A] OpenGL Game               |            |   11:51 |
 #+END:
 * BOOK                                                               :@book:
+** TODO [#B] Visual Studio Hacks
+   :LOGBOOK:
+   CLOCK: [2016-12-30 周五 20:56]--[2016-12-30 周五 21:00] =>  0:04
+   CLOCK: [2016-12-30 周五 17:34]--[2016-12-30 周五 17:40] =>  0:06
+   :END:
 ** TODO [#C] CLRS
 ** TODO [#A] Windows 核心编程
 ** TODO [#A] Windows 程序设计
