--- a/tasks.org
+++ b/tasks.org
@@ -4,17 +4,16 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2016-12-29 周四 05:07]
-| Headline                                | Time       |         |
-|-----------------------------------------+------------+---------|
-| *Total time*                            | *1d 20:06* |         |
-|-----------------------------------------+------------+---------|
-| BOOK                                    | 1d 8:15    |         |
-| \_  TODO [#A] Windows 程序设计          |            |    1:22 |
-| \_  TODO [#B] Mathematics of 3D Game... |            |    0:54 |
-| \_  TODO [#A] Game Coding Complete[45%] |            | 1d 5:59 |
-| Homework                                | 11:51      |         |
-| \_  TODO [#A] OpenGL Game               |            |   11:51 |
+#+CAPTION: Clock summary at [2016-12-30 周五 21:35]
+| Headline                                | Time      |         |
+|-----------------------------------------+-----------+---------|
+| *Total time*                            | *1d 8:25* |         |
+|-----------------------------------------+-----------+---------|
+| BOOK                                    | 1d 8:25   |         |
+| \_  TODO [#B] Visual Studio Hacks       |           |    0:10 |
+| \_  TODO [#A] Windows 程序设计          |           |    1:22 |
+| \_  TODO [#B] Mathematics of 3D Game... |           |    0:54 |
+| \_  TODO [#A] Game Coding Complete[45%] |           | 1d 5:59 |
 #+END:
 * BOOK                                                               :@book:
 ** TODO [#B] Visual Studio Hacks
