--- a/tasks.org
+++ b/tasks.org
@@ -4,18 +4,25 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2016-12-30 周五 21:35]
-| Headline                                | Time      |         |
-|-----------------------------------------+-----------+---------|
-| *Total time*                            | *1d 8:25* |         |
-|-----------------------------------------+-----------+---------|
-| BOOK                                    | 1d 8:25   |         |
-| \_  TODO [#B] Visual Studio Hacks       |           |    0:10 |
-| \_  TODO [#A] Windows 程序设计          |           |    1:22 |
-| \_  TODO [#B] Mathematics of 3D Game... |           |    0:54 |
-| \_  TODO [#A] Game Coding Complete[45%] |           | 1d 5:59 |
+#+CAPTION: Clock summary at [2017-01-05 周四 23:24]
+| Headline                                | Time       |         |
+|-----------------------------------------+------------+---------|
+| *Total time*                            | *1d 11:27* |         |
+|-----------------------------------------+------------+---------|
+| BOOK                                    | 1d 11:27   |         |
+| \_  TODO [#B] 程序员的自我修养          |            |    0:04 |
+| \_  TODO [#B] Visual Studio Hacks       |            |    0:10 |
+| \_  TODO [#A] Windows 程序设计          |            |    1:22 |
+| \_  TODO [#B] Mathematics of 3D Game... |            |    0:54 |
+| \_  TODO [#A] Game Coding Complete[50%] |            | 1d 7:44 |
+| \_  TODO [#B] 我所理解的 COCOS2D-X       |            |    0:14 |
+| \_  TODO [#B] Game Programming Patterns |            |    0:59 |
 #+END:
 * BOOK                                                               :@book:
+** TODO [#B] 程序员的自我修养
+   :LOGBOOK:
+   CLOCK: [2017-01-04 周三 16:09]--[2017-01-04 周三 16:13] =>  0:04
+   :END:
 ** TODO [#B] Visual Studio Hacks
    :LOGBOOK:
    CLOCK: [2016-12-30 周五 20:56]--[2016-12-30 周五 21:00] =>  0:04
@@ -74,7 +81,7 @@
     :LOGBOOK:
     CLOCK: [2016-12-13 二 18:48]--[2016-12-13 二 19:42] =>  0:54
    :END:   
-** TODO [#A] Game Coding Complete[45%]
+** TODO [#A] Game Coding Complete[50%]
    - [X] 什么是游戏编程
    - [X] 游戏中有什么
    - [X] 拯救了我的编码趣闻和风格
@@ -91,7 +98,7 @@
    - [X] 3D 图形基础
    - [ ] 3D 顶点和像素着色器
    - [ ] 3D 场景
-   - [ ] 碰撞和简单的物理学
+   - [X] 碰撞和简单的物理学 ?
    - [ ] 游戏 AI 简介
    - [ ] 多玩家游戏的网络编程
    - [ ] 多道程序设计简介
@@ -100,6 +107,11 @@
    - [ ] 对游戏进行调试和分析
    - [ ] 驶向结束
    :LOGBOOK:
+   CLOCK: [2017-01-05 周四 22:15]--[2017-01-05 周四 22:17] =>  0:02
+   CLOCK: [2017-01-05 周四 20:43]--[2017-01-05 周四 20:47] =>  0:04
+   CLOCK: [2017-01-05 周四 19:17]--[2017-01-05 周四 19:57] =>  0:40
+   CLOCK: [2017-01-02 周一 16:26]--[2017-01-02 周一 16:44] =>  0:18
+   CLOCK: [2017-01-02 周一 14:07]--[2017-01-02 周一 14:48] =>  0:41
    CLOCK: [2016-12-28 周三 17:12]--[2016-12-28 周三 19:53] =>  2:41
    CLOCK: [2016-12-28 周三 11:28]--[2016-12-28 周三 11:30] =>  0:02
    CLOCK: [2016-12-28 周三 09:51]--[2016-12-28 周三 11:00] =>  1:09
@@ -141,7 +153,16 @@
    DEADLINE: <2016-12-31 周六> SCHEDULED: <2016-12-14 周三>
 ** TODO [#C] GEA
 ** TODO [#C] OpenGL Programming Guide 9th Ed
+** TODO [#B] 我所理解的 COCOS2D-X 
+   :LOGBOOK:
+   CLOCK: [2017-01-05 周四 22:07]--[2017-01-05 周四 22:15] =>  0:08
+   CLOCK: [2017-01-05 周四 20:48]--[2017-01-05 周四 20:54] =>  0:06
+   :END:
 ** TODO [#C] Multiplayer Game Programming
+** TODO [#B] Game Programming Patterns
+   :LOGBOOK:
+   CLOCK: [2017-01-05 周四 22:25]--[2017-01-05 周四 23:24] =>  0:59
+   :END:
 * Homework
 * Things
 * Daily                                                             :@daily:
