--- a/tasks.org
+++ b/tasks.org
@@ -4,18 +4,19 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-01-05 周四 23:24]
+#+CAPTION: Clock summary at [2017-01-06 周五 16:28]
 | Headline                                | Time       |         |
 |-----------------------------------------+------------+---------|
-| *Total time*                            | *1d 11:27* |         |
+| *Total time*                            | *1d 12:00* |         |
 |-----------------------------------------+------------+---------|
-| BOOK                                    | 1d 11:27   |         |
+| BOOK                                    | 1d 12:00   |         |
 | \_  TODO [#B] 程序员的自我修养          |            |    0:04 |
 | \_  TODO [#B] Visual Studio Hacks       |            |    0:10 |
 | \_  TODO [#A] Windows 程序设计          |            |    1:22 |
 | \_  TODO [#B] Mathematics of 3D Game... |            |    0:54 |
-| \_  TODO [#A] Game Coding Complete[50%] |            | 1d 7:44 |
-| \_  TODO [#B] 我所理解的 COCOS2D-X       |            |    0:14 |
+| \_  TODO [#A] Game Coding Complete[50%] |            | 1d 7:50 |
+| \_  TODO [#C] GEA                       |            |    0:27 |
+| \_  TODO [#B] 我所理解的 COCOS2D-X      |            |    0:14 |
 | \_  TODO [#B] Game Programming Patterns |            |    0:59 |
 #+END:
 * BOOK                                                               :@book:
@@ -107,6 +108,7 @@
    - [ ] 对游戏进行调试和分析
    - [ ] 驶向结束
    :LOGBOOK:
+   CLOCK: [2017-01-06 周五 16:22]--[2017-01-06 周五 16:28] =>  0:06
    CLOCK: [2017-01-05 周四 22:15]--[2017-01-05 周四 22:17] =>  0:02
    CLOCK: [2017-01-05 周四 20:43]--[2017-01-05 周四 20:47] =>  0:04
    CLOCK: [2017-01-05 周四 19:17]--[2017-01-05 周四 19:57] =>  0:40
@@ -152,6 +154,9 @@
    :END:
    DEADLINE: <2016-12-31 周六> SCHEDULED: <2016-12-14 周三>
 ** TODO [#C] GEA
+   :LOGBOOK:
+   CLOCK: [2017-01-06 周五 15:55]--[2017-01-06 周五 16:22] =>  0:27
+   :END:
 ** TODO [#C] OpenGL Programming Guide 9th Ed
 ** TODO [#B] 我所理解的 COCOS2D-X 
    :LOGBOOK:
@@ -165,6 +170,7 @@
    :END:
 * Homework
 * Things
+** TODO Blog
 * Daily                                                             :@daily:
 
 
