--- a/plan.org
+++ b/plan.org
@@ -179,6 +179,9 @@
 *** Windows 核心编程
 ** Book 
    - [X] 程序员的思维修炼
-   - [ ] 
+   - [ ] 冒号课堂
+   - [ ] 网络游戏核心技术与实战
+   - [ ] 面向对象的游戏开发
+   - [ ] 游戏编程之从零开始
 * Language
 
