--- a/tasks.org
+++ b/tasks.org
@@ -4,19 +4,20 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-01-06 周五 16:28]
+#+CAPTION: Clock summary at [2017-01-08 周日 20:42]
 | Headline                                | Time       |         |
 |-----------------------------------------+------------+---------|
-| *Total time*                            | *1d 12:00* |         |
+| *Total time*                            | *1d 13:33* |         |
 |-----------------------------------------+------------+---------|
-| BOOK                                    | 1d 12:00   |         |
+| BOOK                                    | 1d 13:33   |         |
 | \_  TODO [#B] 程序员的自我修养          |            |    0:04 |
 | \_  TODO [#B] Visual Studio Hacks       |            |    0:10 |
 | \_  TODO [#A] Windows 程序设计          |            |    1:22 |
 | \_  TODO [#B] Mathematics of 3D Game... |            |    0:54 |
-| \_  TODO [#A] Game Coding Complete[50%] |            | 1d 7:50 |
-| \_  TODO [#C] GEA                       |            |    0:27 |
+| \_  TODO [#A] Game Coding Complete[50%] |            | 1d 7:57 |
+| \_  TODO [#C] GEA[0%]                   |            |    0:27 |
 | \_  TODO [#B] 我所理解的 COCOS2D-X      |            |    0:14 |
+| \_  TODO [#B] 冒号课堂                  |            |    1:26 |
 | \_  TODO [#B] Game Programming Patterns |            |    0:59 |
 #+END:
 * BOOK                                                               :@book:
@@ -108,6 +109,7 @@
    - [ ] 对游戏进行调试和分析
    - [ ] 驶向结束
    :LOGBOOK:
+   CLOCK: [2017-01-07 周六 19:20]--[2017-01-07 周六 19:27] =>  0:07
    CLOCK: [2017-01-06 周五 16:22]--[2017-01-06 周五 16:28] =>  0:06
    CLOCK: [2017-01-05 周四 22:15]--[2017-01-05 周四 22:17] =>  0:02
    CLOCK: [2017-01-05 周四 20:43]--[2017-01-05 周四 20:47] =>  0:04
@@ -153,7 +155,22 @@
    CLOCK: [2016-12-14 周三 16:15]--[2016-12-14 周三 17:05] =>  0:50
    :END:
    DEADLINE: <2016-12-31 周六> SCHEDULED: <2016-12-14 周三>
-** TODO [#C] GEA
+** TODO [#C] GEA[0%]
+   - [ ] 导论
+   - [ ] 专业工具
+   - [ ] 游戏软件工程基础
+   - [ ] 游戏所需的三维数学
+   - [ ] 游戏支持系统
+   - [ ] 资源及文件系统
+   - [ ] 游戏循环及实时模拟
+   - [ ] 人体学接口设备
+   - [ ] 调试及开发工具
+   - [ ] 渲染引擎
+   - [ ] 动画系统
+   - [ ] 碰撞及刚体动力学
+   - [ ] 游戏性系统简介
+   - [ ] 运行时游戏性基础系统
+   - [ ] 还有更多内容吗
    :LOGBOOK:
    CLOCK: [2017-01-06 周五 15:55]--[2017-01-06 周五 16:22] =>  0:27
    :END:
@@ -164,6 +181,12 @@
    CLOCK: [2017-01-05 周四 20:48]--[2017-01-05 周四 20:54] =>  0:06
    :END:
 ** TODO [#C] Multiplayer Game Programming
+** TODO [#B] 冒号课堂
+   :LOGBOOK:
+   CLOCK: [2017-01-08 周日 20:27]--[2017-01-08 周日 20:41] =>  0:14
+   CLOCK: [2017-01-08 周日 19:56]--[2017-01-08 周日 20:17] =>  0:21
+   CLOCK: [2017-01-08 周日 16:05]--[2017-01-08 周日 16:56] =>  0:51
+   :END:
 ** TODO [#B] Game Programming Patterns
    :LOGBOOK:
    CLOCK: [2017-01-05 周四 22:25]--[2017-01-05 周四 23:24] =>  0:59
