--- a/tasks.org
+++ b/tasks.org
@@ -4,12 +4,12 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-01-08 周日 20:42]
+#+CAPTION: Clock summary at [2017-01-09 一 17:04]
 | Headline                                | Time       |         |
 |-----------------------------------------+------------+---------|
-| *Total time*                            | *1d 13:33* |         |
+| *Total time*                            | *1d 16:05* |         |
 |-----------------------------------------+------------+---------|
-| BOOK                                    | 1d 13:33   |         |
+| BOOK                                    | 1d 16:05   |         |
 | \_  TODO [#B] 程序员的自我修养          |            |    0:04 |
 | \_  TODO [#B] Visual Studio Hacks       |            |    0:10 |
 | \_  TODO [#A] Windows 程序设计          |            |    1:22 |
@@ -17,7 +17,7 @@
 | \_  TODO [#A] Game Coding Complete[50%] |            | 1d 7:57 |
 | \_  TODO [#C] GEA[0%]                   |            |    0:27 |
 | \_  TODO [#B] 我所理解的 COCOS2D-X      |            |    0:14 |
-| \_  TODO [#B] 冒号课堂                  |            |    1:26 |
+| \_  TODO [#B] 冒号课堂                  |            |    3:58 |
 | \_  TODO [#B] Game Programming Patterns |            |    0:59 |
 #+END:
 * BOOK                                                               :@book:
@@ -183,6 +183,11 @@
 ** TODO [#C] Multiplayer Game Programming
 ** TODO [#B] 冒号课堂
    :LOGBOOK:
+   CLOCK: [2017-01-09 一 17:37]--[2017-01-09 一 17:49] =>  0:12
+   CLOCK: [2017-01-09 一 17:05]--[2017-01-09 一 17:31] =>  0:26
+   CLOCK: [2017-01-09 一 13:55]--[2017-01-09 一 14:28] =>  0:33
+   CLOCK: [2017-01-09 一 12:59]--[2017-01-09 一 13:46] =>  0:47
+   CLOCK: [2017-01-09 一 12:00]--[2017-01-09 一 12:39] =>  0:39
    CLOCK: [2017-01-08 日 21:13]--[2017-01-08 日 21:43] =>  0:30
    CLOCK: [2017-01-08 日 21:10]--[2017-01-08 日 21:13] =>  0:03
    CLOCK: [2017-01-08 周日 20:27]--[2017-01-08 周日 20:41] =>  0:14
