--- a/tasks.org
+++ b/tasks.org
@@ -4,12 +4,12 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-01-09 一 17:04]
+#+CAPTION: Clock summary at [2017-01-10 周二 00:35]
 | Headline                                | Time       |         |
 |-----------------------------------------+------------+---------|
-| *Total time*                            | *1d 16:05* |         |
+| *Total time*                            | *1d 19:22* |         |
 |-----------------------------------------+------------+---------|
-| BOOK                                    | 1d 16:05   |         |
+| BOOK                                    | 1d 19:22   |         |
 | \_  TODO [#B] 程序员的自我修养          |            |    0:04 |
 | \_  TODO [#B] Visual Studio Hacks       |            |    0:10 |
 | \_  TODO [#A] Windows 程序设计          |            |    1:22 |
@@ -17,7 +17,7 @@
 | \_  TODO [#A] Game Coding Complete[50%] |            | 1d 7:57 |
 | \_  TODO [#C] GEA[0%]                   |            |    0:27 |
 | \_  TODO [#B] 我所理解的 COCOS2D-X      |            |    0:14 |
-| \_  TODO [#B] 冒号课堂                  |            |    3:58 |
+| \_  TODO [#B] 冒号课堂                  |            |    7:15 |
 | \_  TODO [#B] Game Programming Patterns |            |    0:59 |
 #+END:
 * BOOK                                                               :@book:
@@ -183,6 +183,10 @@
 ** TODO [#C] Multiplayer Game Programming
 ** TODO [#B] 冒号课堂
    :LOGBOOK:
+   CLOCK: [2017-01-09 周一 23:28]--[2017-01-10 周二 00:35] =>  1:07
+   CLOCK: [2017-01-09 周一 20:52]--[2017-01-09 周一 21:36] =>  0:44
+   CLOCK: [2017-01-09 周一 17:54]--[2017-01-09 周一 18:17] =>  0:23
+   CLOCK: [2017-01-09 周一 17:24]--[2017-01-09 周一 17:49] =>  0:25
    CLOCK: [2017-01-09 一 17:37]--[2017-01-09 一 17:49] =>  0:12
    CLOCK: [2017-01-09 一 17:05]--[2017-01-09 一 17:31] =>  0:26
    CLOCK: [2017-01-09 一 13:55]--[2017-01-09 一 14:28] =>  0:33
