--- a/plan.org
+++ b/plan.org
@@ -175,13 +175,14 @@
 *** Cocos2d-x 3.x
 *** Unreal Engine 
 ** Windows
-*** Windows 程序设计
-*** Windows 核心编程
+   - [ ] Windows 程序设计
+   - [ ] Windows 核心编程
 ** Book 
    - [X] 程序员的思维修炼
-   - [ ] 冒号课堂
+   - [X] 冒号课堂
    - [ ] 网络游戏核心技术与实战
    - [ ] 面向对象的游戏开发
    - [ ] 游戏编程之从零开始
+   - [ ] 软件开发者路线图
 * Language
 
