--- a/tasks.org
+++ b/tasks.org
@@ -4,12 +4,12 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-01-10 周二 00:35]
+#+CAPTION: Clock summary at [2017-01-11 周三 17:14]
 | Headline                                | Time       |         |
 |-----------------------------------------+------------+---------|
-| *Total time*                            | *1d 19:22* |         |
+| *Total time*                            | *1d 12:57* |         |
 |-----------------------------------------+------------+---------|
-| BOOK                                    | 1d 19:22   |         |
+| BOOK                                    | 1d 12:57   |         |
 | \_  TODO [#B] 程序员的自我修养          |            |    0:04 |
 | \_  TODO [#B] Visual Studio Hacks       |            |    0:10 |
 | \_  TODO [#A] Windows 程序设计          |            |    1:22 |
@@ -17,8 +17,8 @@
 | \_  TODO [#A] Game Coding Complete[50%] |            | 1d 7:57 |
 | \_  TODO [#C] GEA[0%]                   |            |    0:27 |
 | \_  TODO [#B] 我所理解的 COCOS2D-X      |            |    0:14 |
-| \_  TODO [#B] 冒号课堂                  |            |    7:15 |
 | \_  TODO [#B] Game Programming Patterns |            |    0:59 |
+| \_  TODO [#A] 游戏编程算法与技巧[7%]    |            |    0:50 |
 #+END:
 * BOOK                                                               :@book:
 ** TODO [#B] 程序员的自我修养
@@ -181,26 +181,28 @@
    CLOCK: [2017-01-05 周四 20:48]--[2017-01-05 周四 20:54] =>  0:06
    :END:
 ** TODO [#C] Multiplayer Game Programming
-** TODO [#B] 冒号课堂
-   :LOGBOOK:
-   CLOCK: [2017-01-09 周一 23:28]--[2017-01-10 周二 00:35] =>  1:07
-   CLOCK: [2017-01-09 周一 20:52]--[2017-01-09 周一 21:36] =>  0:44
-   CLOCK: [2017-01-09 周一 17:54]--[2017-01-09 周一 18:17] =>  0:23
-   CLOCK: [2017-01-09 周一 17:24]--[2017-01-09 周一 17:49] =>  0:25
-   CLOCK: [2017-01-09 一 17:37]--[2017-01-09 一 17:49] =>  0:12
-   CLOCK: [2017-01-09 一 17:05]--[2017-01-09 一 17:31] =>  0:26
-   CLOCK: [2017-01-09 一 13:55]--[2017-01-09 一 14:28] =>  0:33
-   CLOCK: [2017-01-09 一 12:59]--[2017-01-09 一 13:46] =>  0:47
-   CLOCK: [2017-01-09 一 12:00]--[2017-01-09 一 12:39] =>  0:39
-   CLOCK: [2017-01-08 日 21:13]--[2017-01-08 日 21:43] =>  0:30
-   CLOCK: [2017-01-08 日 21:10]--[2017-01-08 日 21:13] =>  0:03
-   CLOCK: [2017-01-08 周日 20:27]--[2017-01-08 周日 20:41] =>  0:14
-   CLOCK: [2017-01-08 周日 19:56]--[2017-01-08 周日 20:17] =>  0:21
-   CLOCK: [2017-01-08 周日 16:05]--[2017-01-08 周日 16:56] =>  0:51
-   :END:
 ** TODO [#B] Game Programming Patterns
    :LOGBOOK:
    CLOCK: [2017-01-05 周四 22:25]--[2017-01-05 周四 23:24] =>  0:59
+   :END:
+** TODO [#A] 游戏编程算法与技巧[7%]
+   - [X] 游戏编程概述
+   - [ ] 2D 图形
+   - [ ] 游戏中的线性代数
+   - [ ] 3D 图形
+   - [ ] 游戏输入
+   - [ ] 声音
+   - [ ] 物理
+   - [ ] 摄像机
+   - [ ] 人工智能
+   - [ ] 用户界面
+   - [ ] 脚本语言和数据格式
+   - [ ] 网络游戏
+   - [ ] 横向滚屏者
+   - [ ] 塔防
+   :LOGBOOK:
+   CLOCK: [2017-01-11 周三 16:50]--[2017-01-11 周三 17:14] =>  0:24
+   CLOCK: [2017-01-11 周三 13:43]--[2017-01-11 周三 14:09] =>  0:26
    :END:
 * Homework
 * Things
