--- a/tasks.org
+++ b/tasks.org
@@ -201,6 +201,7 @@
    - [ ] 横向滚屏者
    - [ ] 塔防
    :LOGBOOK:
+   CLOCK: [2017-01-11 三 17:23]--[2017-01-11 三 17:36] =>  0:13
    CLOCK: [2017-01-11 周三 16:50]--[2017-01-11 周三 17:14] =>  0:24
    CLOCK: [2017-01-11 周三 13:43]--[2017-01-11 周三 14:09] =>  0:26
    :END:
