--- a/tasks.org
+++ b/tasks.org
@@ -4,64 +4,50 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-01-11 周三 17:14]
+#+CAPTION: Clock summary at [2017-01-17 周二 23:46]
 | Headline                                | Time       |         |
 |-----------------------------------------+------------+---------|
-| *Total time*                            | *1d 12:57* |         |
+| *Total time*                            | *1d 13:03* |         |
 |-----------------------------------------+------------+---------|
-| BOOK                                    | 1d 12:57   |         |
-| \_  TODO [#B] 程序员的自我修养          |            |    0:04 |
-| \_  TODO [#B] Visual Studio Hacks       |            |    0:10 |
-| \_  TODO [#A] Windows 程序设计          |            |    1:22 |
+| BOOK                                    | 1d 13:03   |         |
+| \_  TODO [#A] Unity 权威讲解            |            |    0:17 |
+| \_  TODO [#B] 游戏编程算法与技巧[7%]    |            |    1:03 |
 | \_  TODO [#B] Mathematics of 3D Game... |            |    0:54 |
-| \_  TODO [#A] Game Coding Complete[50%] |            | 1d 7:57 |
-| \_  TODO [#C] GEA[0%]                   |            |    0:27 |
-| \_  TODO [#B] 我所理解的 COCOS2D-X      |            |    0:14 |
-| \_  TODO [#B] Game Programming Patterns |            |    0:59 |
-| \_  TODO [#A] 游戏编程算法与技巧[7%]    |            |    0:50 |
+| \_  TODO [#B] Game Coding Complete[50%] |            | 1d 7:57 |
+| \_  TODO [#B] GEA[0%]                   |            |    0:27 |
+| \_  TODO [#C] 程序员的自我修养          |            |    0:04 |
+| \_  TODO [#C] Game Programming Patterns |            |    0:59 |
+| \_  TODO [#C] Windows 程序设计          |            |    1:22 |
 #+END:
 * BOOK                                                               :@book:
-** TODO [#B] 程序员的自我修养
+** TODO [#A] CPPP
+** TODO [#A] CLRS
+** TODO [#A] OpenGL Programming Guide 8th Ed
+** TODO [#A] Unity 权威讲解
    :LOGBOOK:
-   CLOCK: [2017-01-04 周三 16:09]--[2017-01-04 周三 16:13] =>  0:04
+   CLOCK: [2017-01-17 周二 23:29]--[2017-01-17 周二 23:46] =>  0:17
    :END:
-** TODO [#B] Visual Studio Hacks
+** TODO [#A] 程序员修炼之道
+** TODO [#B] 游戏编程算法与技巧[7%]
+   - [X] 游戏编程概述
+   - [ ] 2D 图形
+   - [ ] 游戏中的线性代数
+   - [ ] 3D 图形
+   - [ ] 游戏输入
+   - [ ] 声音
+   - [ ] 物理
+   - [ ] 摄像机
+   - [ ] 人工智能
+   - [ ] 用户界面
+   - [ ] 脚本语言和数据格式
+   - [ ] 网络游戏
+   - [ ] 横向滚屏者
+   - [ ] 塔防
    :LOGBOOK:
-   CLOCK: [2016-12-30 周五 20:56]--[2016-12-30 周五 21:00] =>  0:04
-   CLOCK: [2016-12-30 周五 17:34]--[2016-12-30 周五 17:40] =>  0:06
+   CLOCK: [2017-01-11 三 17:23]--[2017-01-11 三 17:36] =>  0:13
+   CLOCK: [2017-01-11 周三 16:50]--[2017-01-11 周三 17:14] =>  0:24
+   CLOCK: [2017-01-11 周三 13:43]--[2017-01-11 周三 14:09] =>  0:26
    :END:
-** TODO [#C] CLRS
-** TODO [#A] Windows 核心编程
-** TODO [#A] Windows 程序设计
-   - [X] 起步
-   - [X] Unicode 简介
-   - [X] 窗口与消息
-   - [ ] 文本输出
-   - [ ] 绘图基础
-   - [ ] 键盘
-   - [ ] 鼠标
-   - [ ] 计时器
-   - [ ] 子窗口控件
-   - [ ] 菜单和其他资源
-   - [ ] 对话框
-   - [ ] 剪贴板
-   - [ ] 使用打印机
-   - [ ] 位图和位块传输
-   - [ ] 设备无关位图
-   - [ ] 调色板管理器
-   - [ ] 文本和字体
-   - [ ] 图元文件
-   - [ ] 多文档界面
-   - [ ] 多任务和多线程
-   - [ ] 动态链接库
-   - [ ] 声音和音乐
-   - [ ] 尝试互联网
-   :LOGBOOK:
-   CLOCK: [2016-12-19 周一 13:13]--[2016-12-19 周一 13:52] =>  0:39
-   CLOCK: [2016-12-19 周一 12:10]--[2016-12-19 周一 12:47] =>  0:37
-   CLOCK: [2016-12-19 周一 12:01]--[2016-12-19 周一 12:07] =>  0:06
-   :END:
-** TODO [#B] CPPP
 ** TODO [#B] Mathematics of 3D Game Programming and Computer Graphics[12%]
    - [X] 渲染管线
    - [X] 向量
@@ -83,7 +69,7 @@
     :LOGBOOK:
     CLOCK: [2016-12-13 二 18:48]--[2016-12-13 二 19:42] =>  0:54
    :END:   
-** TODO [#A] Game Coding Complete[50%]
+** TODO [#B] Game Coding Complete[50%]
    - [X] 什么是游戏编程
    - [X] 游戏中有什么
    - [X] 拯救了我的编码趣闻和风格
@@ -155,7 +141,7 @@
    CLOCK: [2016-12-14 周三 16:15]--[2016-12-14 周三 17:05] =>  0:50
    :END:
    DEADLINE: <2016-12-31 周六> SCHEDULED: <2016-12-14 周三>
-** TODO [#C] GEA[0%]
+** TODO [#B] GEA[0%]
    - [ ] 导论
    - [ ] 专业工具
    - [ ] 游戏软件工程基础
@@ -174,40 +160,50 @@
    :LOGBOOK:
    CLOCK: [2017-01-06 周五 15:55]--[2017-01-06 周五 16:22] =>  0:27
    :END:
-** TODO [#C] OpenGL Programming Guide 9th Ed
-** TODO [#B] 我所理解的 COCOS2D-X 
+** TODO [#C] 程序员的自我修养
    :LOGBOOK:
-   CLOCK: [2017-01-05 周四 22:07]--[2017-01-05 周四 22:15] =>  0:08
-   CLOCK: [2017-01-05 周四 20:48]--[2017-01-05 周四 20:54] =>  0:06
+   CLOCK: [2017-01-04 周三 16:09]--[2017-01-04 周三 16:13] =>  0:04
    :END:
-** TODO [#C] Multiplayer Game Programming
-** TODO [#B] Game Programming Patterns
+** TODO [#C] Game Programming Patterns
    :LOGBOOK:
    CLOCK: [2017-01-05 周四 22:25]--[2017-01-05 周四 23:24] =>  0:59
    :END:
-** TODO [#A] 游戏编程算法与技巧[7%]
-   - [X] 游戏编程概述
-   - [ ] 2D 图形
-   - [ ] 游戏中的线性代数
-   - [ ] 3D 图形
-   - [ ] 游戏输入
-   - [ ] 声音
-   - [ ] 物理
-   - [ ] 摄像机
-   - [ ] 人工智能
-   - [ ] 用户界面
-   - [ ] 脚本语言和数据格式
-   - [ ] 网络游戏
-   - [ ] 横向滚屏者
-   - [ ] 塔防
+** TODO [#C] Windows 程序设计
+   - [X] 起步
+   - [X] Unicode 简介
+   - [X] 窗口与消息
+   - [ ] 文本输出
+   - [ ] 绘图基础
+   - [ ] 键盘
+   - [ ] 鼠标
+   - [ ] 计时器
+   - [ ] 子窗口控件
+   - [ ] 菜单和其他资源
+   - [ ] 对话框
+   - [ ] 剪贴板
+   - [ ] 使用打印机
+   - [ ] 位图和位块传输
+   - [ ] 设备无关位图
+   - [ ] 调色板管理器
+   - [ ] 文本和字体
+   - [ ] 图元文件
+   - [ ] 多文档界面
+   - [ ] 多任务和多线程
+   - [ ] 动态链接库
+   - [ ] 声音和音乐
+   - [ ] 尝试互联网
    :LOGBOOK:
-   CLOCK: [2017-01-11 三 17:23]--[2017-01-11 三 17:36] =>  0:13
-   CLOCK: [2017-01-11 周三 16:50]--[2017-01-11 周三 17:14] =>  0:24
-   CLOCK: [2017-01-11 周三 13:43]--[2017-01-11 周三 14:09] =>  0:26
+   CLOCK: [2016-12-19 周一 13:13]--[2016-12-19 周一 13:52] =>  0:39
+   CLOCK: [2016-12-19 周一 12:10]--[2016-12-19 周一 12:47] =>  0:37
+   CLOCK: [2016-12-19 周一 12:01]--[2016-12-19 周一 12:07] =>  0:06
    :END:
+** TODO [#C] Multiplayer Game Programming
 * Homework
 * Things
 ** TODO Blog
+** TODO 复习数据库
+   DEADLINE: <2017-02-19 周日>
 * Daily                                                             :@daily:
+** TODO 练习双拼和英文打字
 
 
