--- a/tasks.org
+++ b/tasks.org
@@ -20,11 +20,34 @@
 | \_  TODO [#C] Windows 程序设计          |            |    1:22 |
 #+END:
 * BOOK                                                               :@book:
-** TODO [#A] CPPP
+** TODO [#A] CPPP[0%]
+   - [ ] 开始
+   - [ ] 变量和基本类型
+   - [ ] 字符串，向量和数组
+   - [ ] 表达式
+   - [ ] 语句
+   - [ ] 函数
+   - [ ] 类
+   - [ ] IO 库
+   - [ ] 顺序容器
+   - [ ] 泛型算法
+   - [ ] 关联容器
+   - [ ] 动态内存
+   - [ ] 拷贝控制
+   - [ ] 重载运算与类型转换
+   - [ ] 面向对象程序设计
+   - [ ] 模版与泛型编程
+   - [ ] 标准库特殊设施
+   - [ ] 用于大型程序的工具
+   - [ ] 特殊工具与技术
+   :LOGBOOK:
+   :END:
 ** TODO [#A] CLRS
 ** TODO [#A] OpenGL Programming Guide 8th Ed
 ** TODO [#A] Unity 权威讲解
    :LOGBOOK:
+   CLOCK: [2017-01-18 周三 11:35]--[2017-01-18 周三 12:11] =>  0:36
+   CLOCK: [2017-01-18 周三 10:29]--[2017-01-18 周三 11:20] =>  0:51
    CLOCK: [2017-01-17 周二 23:29]--[2017-01-17 周二 23:46] =>  0:17
    :END:
 ** TODO [#A] 程序员修炼之道
