--- a/tasks.org
+++ b/tasks.org
@@ -20,9 +20,9 @@
 | \_  TODO [#C] Windows 程序设计          |            |    1:22 |
 #+END:
 * BOOK                                                               :@book:
-** TODO [#A] CPPP[0%]
-   - [ ] 开始
-   - [ ] 变量和基本类型
+** TODO [#A] CPPP[10%]
+   - [X] 开始
+   - [X] 变量和基本类型
    - [ ] 字符串，向量和数组
    - [ ] 表达式
    - [ ] 语句
@@ -41,6 +41,14 @@
    - [ ] 用于大型程序的工具
    - [ ] 特殊工具与技术
    :LOGBOOK:
+   CLOCK: [2017-01-19 四 04:38]--[2017-01-19 四 05:12] =>  0:34
+   CLOCK: [2017-01-19 四 03:56]--[2017-01-19 四 04:24] =>  0:28
+   CLOCK: [2017-01-19 四 01:45]--[2017-01-19 四 02:17] =>  0:32
+   CLOCK: [2017-01-19 四 00:36]--[2017-01-19 四 01:20] =>  0:44
+   CLOCK: [2017-01-19 四 00:33]--[2017-01-19 四 00:36] =>  0:03
+   CLOCK: [2017-01-19 四 00:05]--[2017-01-19 四 00:13] =>  0:08
+   CLOCK: [2017-01-18 三 23:49]--[2017-01-19 四 00:05] =>  0:16
+   CLOCK: [2017-01-18 三 22:33]--[2017-01-18 三 23:12] =>  0:39
    :END:
 ** TODO [#A] CLRS
 ** TODO [#A] OpenGL Programming Guide 8th Ed
